--- a/output.html
+++ b/output.html
@@ -47,7 +47,7 @@
 
 	<div class="row-main row-main--article">
 		<p class="text-bold text-lg">
-			Zpravodajský server iROZHLAS.cz přináší přehled lidí, témat a článků, které v každém z týdnů uplynulého roku upoutaly pozornost nejvyššího počtu čtenářů.
+			Zpravodajský server iROZHLAS.cz přináší přehled lidí, témat a článků, které v každém z týdnů končícího roku upoutaly pozornost nejvyššího počtu čtenářů.
 		</p>
 		<p><span class="hide--m"><i>Levý sloupec ukazuje slova, která na iROZHLAS.cz přivedla čtenáře z vyhledávače Google, prostřední pak nejčtenější články zpravodajského serveru. Pravý sloupec zobrazuje nejčtenější články na internetové encyklopedii Wikipedie. Graf pod odkazem zvýrazňuje den, kdy byla návštěvnost článku nejvyšší - ten ale může být i mimo příslušný týden.</i></span></p>
 <p><span class="hide--d"><i>Každý týdenní záznam ukazuje slova, která na iROZHLAS.cz přivedla čtenáře z vyhledávače Google, nejčtenější články zpravodajského serveru a nejčtenější články na internetové encyklopedii Wikipedie. Graf pod odkazem na Wikipedii zvýrazňuje den, kdy byla návštěvnost článku nejvyšší - ten ale může být i mimo příslušný týden.</i></span></p>
